# T-Res

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  candidate_selection.py  conf.py  deezymatching.py  docker-compose.yml  genindex.html  index.html  index.rst  ner_training.py  objects.inv  pipeline.py  pipeline_evaluation.ipynb  process_data.py  processing.py  py-modindex.html  pyproject.toml  requirements.txt  resolution_pipeline.py  search.html  searchindex.js  toponym_resolution_pipeline.ipynb  toponym_resolution_pipeline.py  wikidata_extraction.py
.github/workflows/: cd.yml  ci.yml  docs.yml
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/experiments/: index.rst.txt
_sources/getting-started/: complete-tour.rst.txt  index.rst.txt  resources.rst.txt
_sources/t-res-api/: index.rst.txt  usage.rst.txt
api/: index.html
api/geoparser/: index.html  linker.html  pipeline.html  ranker.html  recogniser.html
api/utils/: deezy_processing.html  get_data.html  index.html  ner.html  preprocess_data.html  (+4 more)
app/: app_template.py  deezy_mostpopular.Dockerfile  deezy_mostpopular_app.py  run_local_app.py  template.Dockerfile  test_app.py
evaluation/: README.md  display_results.py
examples/: load_use_ner_model.ipynb  run_basic_pipeline.ipynb  run_pipeline_basic.ipynb  run_pipeline_deezy_mostpopular.ipynb  run_pipeline_deezy_reldisamb+wmtops.ipynb  run_pipeline_deezy_reldisamb+wpubl+wmtops.ipynb  run_pipeline_deezy_reldisamb+wpubl.ipynb  run_pipeline_deezy_reldisamb.ipynb  run_pipeline_modular.ipynb  run_pipeline_perfect_mostpopular.ipynb  rw_test.ipynb  train_ner_model.ipynb  train_use_deezy_model.ipynb  train_use_deezy_model_1.ipynb  train_use_deezy_model_2.ipynb  train_use_deezy_model_3.ipynb  train_use_ner_model.ipynb
experiments/: README.md  apply_pipeline.py  data_processing.py  experiment.py  index.html  ner_training.py  postprocess_linking.py  prepare_data.py  run_deezy_mostpopular.ipynb  run_deezy_rel_with_publ.ipynb  run_deezy_rel_without_publ.ipynb  run_perfect_mostpopular.ipynb  run_pipeline.ipynb  test_performance.ipynb  toponym_resolution.ipynb  toponym_resolution.py
geoparser/: experiment.py  linking.py  pipeline.py  preparation.py  processing.py  ranking.py  recogniser.py
getting-started/: complete-tour.html  index.html  installation.html  resources.html
other-files/: index.html
preprocessing/: data_processing.py
reference/: index.html
resources/: publication_metadata.json
t-res-api/: index.html  installation.html  usage.html
tests/: conftest.py  test_data.py  test_data_processing.py  test_deezy.py  test_disambiguation.py  test_experiments.py  test_linking.py  test_ner.py  test_pipeline.py  test_process_data.py  test_ranking.py  test_rel.py  test_resolution.py  test_wiki_functions.py
tools/: get_data.py
utils/: candidate_selection.py  deezy_processing.py  eval.py  get_data.py  gnn_method.py  linking.py  ner.py  pipeline_utils.py  preprocess_data.py  process_data.py  process_wikipedia.py  ranking.py  rel_e2e.py  rel_utils.py  resolution_pipeline.py  tools_perceptron.py  training.py  utils.py
(+193 files in other folders)
