[tool.poetry]
name = "resolution"
version = "0.1.0"
description = ""
authors = ["Federico Nanni <nanni.federico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.3"
bs4 = "^0.0.1"
pandas = "^1.3.4"
wget = "^3.2"
DeezyMatch = "^1.3.4"
datasets = "^1.18.0"
transformers = "^4.15.0"
pydash = "^5.1.0"
wikimapper = "^0.1.5"
numpy = "^1.22.1"
scikit-learn = "^1.0.2"
docopt = "^0.6.2"
seqeval = "^1.2.2"
requests = "^2.27.1"
pandarallel = "^1.6.1"
black = "^22.3.0"
pyxDamerauLevenshtein = "^1.7.0"
anyascii = "^0.3.1"
colorama = "^0.4.4"
nltk = "^3.7"
flair = "0.10"
networkx = "^2.8.4"
thefuzz = "^0.19.0"
sentence-splitter = "^1.4"
haversine = "^2.7.0"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
